tests/NormalTests/paczka1/small_fuzzy/88393642.err
Error in line 7: QMZAAX6AzJV A0 84,4
Error in line 9: HcL S833 82,0
